@@ -1,5 +1,6 @@
 * Mon Dec 9 2002 Philip Tellis
 - Changed u_char to unsigned char
+- Fixed yahoo_get16 and yahoo_get32 to work with big endian systems also
 
 * Tue Nov 19 2002 Philip Tellis
 - Added code to process a voice chat invite.  Doesn't do anything.
